--- a/MenorAuto/index.css
+++ b/MenorAuto/index.css
@@ -5,12 +5,8 @@
 }
 
 body {
-  background: linear-gradient(
-    180deg,
-    rgba(63, 57, 69, 0.89) 50.4807710647583%,
-    rgba(44, 37, 37, 1) 100%
-  );
-  height: 100vw;
+  background: rgba(63, 57, 69, 0.89);
+
 }
 
 /* header */
@@ -24,7 +20,6 @@ a{
     font-style: italic;
 }
 header{
-  background-image:url("img/Back_logo.png");
   margin-top: 1em;
   display: flex;
   flex-direction: row;
@@ -54,3 +49,14 @@ main{
     align-items: center;
     margin-top: 2em;
 }
+
+/* Media Query*/
+
+
+@media (max-width: 768px) and (min-width: 376px){
+
+}
+@media (max-width: 1200px){
+
+}
+/* Media Query*/
