--- a/MenorAuto/index.css
+++ b/MenorAuto/index.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: antiquewhite;
     
 }
@@ -12,16 +12,26 @@ body {
   background-size: cover;
   background-position: center center;
   height: 100%;
-  /* z-index: -; */
+}
+
+/* header */
+.material-symbols-outlined {
+  position: absolute;
+  right: 20px;
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
 }
 
 
 
 .background-overlay{
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.806);
 }
 
-/* header */
+
 
 .mainicon{
   height: 40px;
@@ -37,19 +47,15 @@ a{
 }
 
 .header{
-  background-image: linear-gradient(to top, rgb(255, 178, 34), rgb(216, 100, 33));
+  width: 100%;
+  background-image: linear-gradient(to top, rgba(18, 18, 18, 0), rgb(0, 0, 0));
   font-size: 11px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  position: relative;
   z-index: 1;
-}
-
-.logo{
-  clip-path: polygon(0 1%, 100% 0%, 65% 100%, 0% 100%);
-  width: 20%;
-  background-color: white;
 }
 
 .header a{
@@ -63,8 +69,9 @@ a{
 }
 
 #logo-site{
-  padding: 4px;
-  float: inline-start;
+  width: 180px;
+  height: 60px;
+  padding: 0px;
 }
 
 .logo{
@@ -111,6 +118,15 @@ a{
   color: white;
   background-color: rgba(0, 0, 0, 0.678);
   border-radius: 10px;
+  background-position: center;
+}
+
+#imagem-logo-bg{
+  right: 10px;
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  z-index: -1;
 }
 
 .botoes-categorias{  
