--- a/index.css
+++ b/index.css
@@ -130,7 +130,7 @@ main{
 #img-mecanico{
   margin: auto;
   width: 100%;
-  height: 250px;
+  height: 280px;
 }
 
 .main-text{
@@ -154,6 +154,7 @@ main{
   height: 300px;
   margin-top: 50px;
   background-color: #f8670d;
+  box-shadow: 2px 2px 15px #f8670dc5;
   border-radius: 10px;
   padding: 10px;
 }
@@ -169,32 +170,57 @@ main{
   border-radius: 10px;
 }
 
-.botoes-categorias{  
-  margin: 25px;
+.form-cadastro{
   display: flex;
   justify-content: center;
   align-items: center;
-  
-}
-
-.button-category{
-  margin: 10px;
-  width: 100px;
-  background: #f8670d;
-  border-radius: 40px;
+  flex-direction: column;
+  margin: 50px 0px;
   border: none;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #f8670d;
+  width: 80%;
+  box-shadow: 2px 2px 15px #f8670dc5;
 }
 
-.button-category:hover{
-  cursor: pointer;
-  transition: 0.3s;
-  transform: translate(0px, -4px);
+.form-cadastro label{
+  color: white;
+  font-weight: 600;
+  font-size: 1.2em;
+  margin-bottom: 3px;
 }
 
-.button-category img{
-  width: 50px;
-  height: 50px;
-  background: none;
+.form-cadastro form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.form-cadastro form input{
+  border: none;
+  width: 145px;
+  height: 20px;
+  border-radius: 6px;
+  margin-bottom: 10px;
+}
+
+.form-cadastro h2{
+  color: white;
+  font-weight: bolder;
+  font-size: 1.9em;
+  margin-bottom: 10px;
+}
+
+#background-form-cadastro{
+  transform: translate(0px, 40px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height: 300px;
+  background-color: white;
 }
 
 /* End Main */
@@ -203,37 +229,53 @@ main{
 footer{
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgb(20, 20, 20);
+  border-radius: 15px 15px 0px 0px;
   width: 100%;
+}
+
+.icons-social{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .info-footer{
+  gap: 15px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  background-color: rgb(0, 0, 0);
+  margin: 20px 0px;
 }
 
 .info-footer a{
-  gap: 5px;
-  padding: 5px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.425);
-  font-size: 1.1rem;
-  margin-left: 10px ;
-}
-.icons-social{
-  width: 100%;
+  font-weight: normal;
+  color: white;
 }
 
 .redesocial{
-  position: sticky ;
   display: flex;
   justify-content: center;
-  width: 100%;
-  gap: 20px;
-  background-color: rgb(0, 0, 0);
+  align-items: center;
+  flex-direction: row;
+  gap: 15px;
+  margin-bottom: 20px;
 }
-  .redesocial img{
-    filter: invert();
-  }
+
+.redesocial img{
+  width: 40px;
+  height: 40px;
+  filter: invert();
+}
+
+#img-bandeira-cartoes{
+  width: 350px;
+  height: 100px;
+}
 
 /* End Footer*/
 
@@ -280,6 +322,48 @@ footer{
   
   #h2-locale{
     font-size: 2.9em;
+  }
+
+  .form-cadastro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 50px 0px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #f8670d;
+    width: 60%;
+  }
+  
+  .form-cadastro label{
+    color: white;
+    font-weight: 600;
+    font-size: 2.2em;
+    margin-bottom: 3px;
+  }
+  
+  .form-cadastro form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  .form-cadastro form input{
+    border: none;
+    width: 445px;
+    height: 40px;
+    border-radius: 6px;
+    margin-bottom: 10px;
+  }
+  
+  .form-cadastro h2{
+    color: white;
+    font-weight: bolder;
+    font-size: 2.9em;
+    margin-bottom: 10px;
   }
 
 }
