--- a/index.css
+++ b/index.css
@@ -28,7 +28,9 @@ body {
   'FILL' 0,
   'wght' 400,
   'GRAD' 0,
-  'opsz' 24
+  'opsz' 24 ;
+  user-select: none;
+ 
 }
 
 .icon-large{
@@ -61,7 +63,7 @@ a{
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  position: relative;
+  position:fixed;
   z-index: 1;
 }
 
@@ -70,9 +72,13 @@ a{
 }
 
 .header nav a{
-  color: black;
-  background-color: white;
+  color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0);
   font-size: 18px;
+  transition: 200ms;
+}
+.header nav a:hover{
+  scale: 1.3;
 }
 
 #logo-site{
@@ -82,7 +88,8 @@ a{
 }
 
 .logo{
-  margin-top: 10px;
+  user-select: none;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     width: 50%;
@@ -93,12 +100,17 @@ a{
     flex-direction: column;
     gap: 25px;
 }
-
+.actions a{
+  padding: 5px;
+  font-weight: 400;
+  border-radius: 7px;
+}
 /*==================== End header ====================*/
 
 /*==================== Start Main ====================*/
 
 main{
+  padding-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -130,6 +142,7 @@ main{
 }
 
 #img-mecanico{
+  max-width: 600px;
   margin: auto;
   width: 100%;
   height: 320px;
@@ -327,7 +340,9 @@ h3{
     height: 100px;
     padding: 0px;
   }
-
+main{
+  padding-top: 90px;
+}
   .main-text{
     font-size: 2em;
   }
@@ -432,12 +447,30 @@ h3{
     text-align: center;
     font-size: 2.3em;
   }
-
 }
 
 /*==================== computador ====================*/
-@media (min-width: 1025px){
-
+@media (min-width: 1024px){
+.header{
+  justify-content: space-between;
 }
+  .actions{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 5%;
+    width: 30%;
+    margin-right: 10px;
+  }
 
+  main{
+    padding-top: 70px;
+    display: flex;
+    flex-direction: row;
+  }
+  .material-symbols-outlined{
+    transform: scale(0);
+  }
+}
 /*==================== End Media Query ====================*/
