--- a/index.css
+++ b/index.css
@@ -20,20 +20,6 @@ body {
 }
 
 /*==================== Start header ====================*/
-.material-symbols-outlined {
-  color: white;
-  position: absolute;
-  right: 20px;
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-
-.icon-large{
-  font-size: 45px !important;
-}
 
 .background-overlay{
   width: 100%;
@@ -65,16 +51,6 @@ a{
   z-index: 1;
 }
 
-.header a{
-  margin-right: 10px;
-}
-
-.header nav a{
-  color: black;
-  background-color: white;
-  font-size: 18px;
-}
-
 #logo-site{
   width: 180px;
   height: 60px;
@@ -83,15 +59,45 @@ a{
 
 .logo{
   margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    width: 50%;
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
 
-.actions{
-    display: none;
-    flex-direction: column;
-    gap: 25px;
+.menu-toggle {
+  color: white;
+  position: absolute;
+  right: 18px;
+  font-size: 35px !important;
+}
+
+.menu{
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  background-color: #272828;
+  width: 100%;
+  text-align: right;
+}
+
+.menu.active {
+  display: flex;
+}
+
+.menu ul {
+  display: block;
+}
+
+.menu li {
+  margin: 15px 0;
+  padding: 30px 20px;
+  text-align: center;
+}
+
+.menu a {
+  font-weight: 400;
 }
 
 /*==================== End header ====================*/
@@ -108,7 +114,7 @@ main{
 }
 
 .title{
-    margin-top: 20px;
+    margin-top: 60px;
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -344,6 +350,15 @@ h3{
 
 /*==================== Tablet ==================== */
 @media (min-width: 768px) and (max-width: 1024px){
+  
+  .menu-toggle {
+    font-size: 45px !important;
+  }
+  
+  .menu{
+    top: 100px;
+  }
+
   #logo-site{
     width: 350px;
     height: 100px;
@@ -352,21 +367,6 @@ h3{
 
   .main-text{
     font-size: 2em;
-  }
-
-  .material-symbols-outlined {
-    color: white;
-    position: absolute;
-    right: 20px;
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
-  }
-
-  .icon-large{
-    font-size: 80px !important; 
   }
 
   #img-mecanico{
@@ -460,6 +460,9 @@ h3{
 /*==================== computador ====================*/
 @media (min-width: 1025px){
 
+  .menu-toggle {
+    display: none;
+  }
 }
 
 /*==================== End Media Query ====================*/
