--- a/secundary.css
+++ b/secundary.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-image: url(images/background-secundary.png);
+    background-image: url(images/background_-_Editado.webp);
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
