--- a/index.css
+++ b/index.css
@@ -55,10 +55,6 @@ footer.DarkMode{
   width: 100%;
   background-color: rgba(0, 0, 0, 0.626);
   height: 100%;
-
-.background-overlay{
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.726);
 }
 
 .mainicon{
@@ -84,6 +80,7 @@ a{
   align-items: center;
   position:fixed;
   z-index: 1;
+  gap: 20px;
 }
 
 .header a{
@@ -100,10 +97,6 @@ a{
   scale: 1.3;
 }
 
-
-  position: fixed;
-  z-index: 1;
-}
 
 
 #logo-site{
@@ -161,6 +154,9 @@ a{
 
 .menu a {
   font-weight: 400;
+}
+.actions{
+  display: none;
 }
 .actions a{
   padding: 5px;
@@ -594,6 +590,10 @@ main{
     width: 30%;
     margin-right: 10px;
   }
+    .menu-toggle{
+      display: none;
+    }
+
 
   main{
     padding-top: 70px;
