--- a/index.css
+++ b/index.css
@@ -82,7 +82,16 @@ a{
   z-index: 1;
   gap: 20px;
 }
-
+.header > .MudarModo{
+    display: none;
+    cursor: pointer;
+    user-select: none;
+    margin-left: auto;
+    margin-right: auto;
+}
+.menu-active .MudarModo{
+  display: block;
+}
 .header a{
   margin-right: 10px;
 }
@@ -143,13 +152,17 @@ a{
 }
 
 .menu ul {
-  display: block;
+  list-style-type: none; 
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .menu li {
   margin: 15px 0;
   padding: 30px 20px;
   text-align: center;
+  text-decoration: none;
 }
 
 .menu a {
@@ -462,6 +475,11 @@ h3{
   .menu{
     top: 100px;
   }
+  .header .MudarModo{
+    cursor: pointer;
+    user-select: none;
+    display: block;
+  }
 
   #logo-site{
     width: 350px;
@@ -593,7 +611,10 @@ main{
     .menu-toggle{
       display: none;
     }
-
+    .header .MudarModo{
+      display: block;
+    }
+  
 
   main{
     padding-top: 70px;
