--- a/index.css
+++ b/index.css
@@ -12,18 +12,19 @@
 
 body {
   background-image: linear-gradient();
-  background-image: url(images/img-background.jpg);
+  background-image: url(images/background-mobile.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   height: 100%;
   width: 100%;
   transition: 250ms;
+  background-color: #f7f3e4;
 }
 /*==================== DarkMode ====================*/
 body.DarkMode{
   background-color: #252525;
-  background-image: url(images/background.png);
+  background-image: url(images/background-mobile.png);
   background-repeat: repeat;
   background-position: center;
   background-size: contain;
@@ -97,9 +98,10 @@ a{
 }
 
 .header nav a{
+  font-weight: 600;
   color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, 0);
-  font-size: 18px;
+  font-size: 20px;
   transition: 200ms;
 }
 .header nav a:hover{
@@ -172,6 +174,7 @@ a{
   display: none;
 }
 .actions a{
+  font-weight: 800;
   padding: 5px;
   font-weight: 400;
   border-radius: 7px;
@@ -214,30 +217,37 @@ main{
   border-bottom: #f8a60d 1px solid ;
 
 }
-
-#img-mecanico{
-  max-width: 600px;
-  margin: auto;
-  width: 100%;
-  height: 320px;
+.main-img-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.main-text{
-  margin: 20px;
-  padding: 15px;
-  font-size: 1.2em;
-  margin: auto;
-  width: 80%;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.849);
-  border-radius: 10px;
-  background-position: center;
-  max-width: 850.741px;
+      #img-mecanico{
+        max-width: 600px;
+        margin: auto;
+        width: 100%;
+        height: 320px;
+        flex-shrink: 0;
+      }
 
-}
-    .main-text p{
-      text-align: center;
-    }
+      .main-text{
+        margin: 20px;
+        padding: 15px;
+        font-size: 1.2em;
+        margin: auto;
+        width: 80%;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.849);
+        border-radius: 10px;
+        background-position: center;
+        max-width: 850.741px;
+
+      }
+          .main-text p{
+            text-align: center;
+          }
 
 .local-form{
   display: flex;
@@ -459,7 +469,7 @@ h3{
 
   body.DarkMode{
     background-color: #252525;
-    background-image: url(images/background.png);
+    background-image: url(images/background-desktop.jpeg);
     background-repeat: repeat;
     background-position: center;
     background-size: contain;
@@ -589,13 +599,18 @@ main{
 /*==================== Modo Escuro ====================*/
   body.DarkMode{
     background-color: #252525;
-    background-image: url(images/background\ -\ Editado.png);
+    background-image: url(images/background-desktop.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
 /*==================== Modo Escuro ====================*/
-
+body{
+  background-image: url(images/background-desktop.png);
+}
+.background-overlay{
+  background-color: rgba(53, 42, 37, 0.76);
+}
 .header{
   justify-content: space-between;
 }
@@ -611,6 +626,7 @@ main{
     .menu-toggle{
       display: none;
     }
+
     .header .MudarModo{
       display: block;
     }
@@ -621,16 +637,27 @@ main{
     display: flex;
     flex-direction: row;
   }
+    .title{
+      width: 100%;
+    }
+    .main-img-text{
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: center;
+      align-items: center;
+    }
+
   .material-symbols-outlined{
     transform: scale(0);
   }
+
   .local-form{
     display: flex;
     flex-direction: row-reverse;
     width: 100%;
     align-items: center;
     justify-content: space-around;
-    margin-top: 50px;
+
     margin-bottom: 50px;
     gap: 20px;
     
@@ -638,23 +665,28 @@ main{
     .localizacao{
       margin: 0;
     }
+
     .form-cadastro{
       margin: 0;
     }
+
   .info-footer{
     display: flex;
     flex-direction: row;
     gap: 80px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.34);
   }
+  
   .info-footer a{
     transition: 250ms;
     border-bottom: none;
   }
+
   .info-footer a:hover{
     color: #f8670d;
   }
 }
+
 footer.DarkMode{
   background-color: rgba(0, 0, 0, 0);
 }
