--- a/secundary.css
+++ b/secundary.css
@@ -39,10 +39,10 @@ body{
 }
 
 #botao-voltar-para-main svg {
-    fill: rgb(255, 255, 255); /* Cor do SVG para combinar com o texto */
-    width: 1.5em; /* Tamanho proporcional ao texto */
-    height: 1.5em; /* Tamanho proporcional ao texto */
-    vertical-align: text-top; /* Alinha o SVG com o texto */
+    fill: rgb(255, 255, 255); 
+    width: 1.5em; 
+    height: 1.5em;
+    vertical-align: text-top; 
 }
 
 h1{
@@ -60,14 +60,31 @@ h2{
     text-align: center;
 }
 
-.divs{
-    text-align: center;
-    
+.divs {
+    display: flex;
+    align-items: center;
+    gap: 20px; 
+    text-align: left; 
     width: 80%;
     border-radius: 10px;
     margin: auto;
     padding: 10px;
     margin-bottom: 50px;
+}
+
+.divs-suporte {
+    align-items: center; 
+    text-align: center; 
+    width: 80%;
+    border-radius: 10px;
+    margin: auto;
+    padding: 10px;
+    margin-bottom: 50px;
+}
+
+.foto-endereço {
+    flex-shrink: 0; 
+    height: auto;
 }
 
 #btn-fale-conosco{
@@ -82,11 +99,11 @@ h2{
 }
 
 #btn-fale-conosco svg {
-    fill: whitesmoke; /* Cor do SVG para combinar com o texto */
-    width: 1.2em; /* Tamanho proporcional ao texto */
-    height: 1.2em; /* Tamanho proporcional ao texto */
-    vertical-align: text-top; /* Alinha o SVG com o texto */
-    margin-left: 1em; /* Espaço entre o SVG e o texto */
+    fill: whitesmoke; 
+    width: 1.2em; 
+    height: 1.2em; 
+    vertical-align: text-top; 
+    margin-left: 1em; 
 }
 .divs p{
     padding: 5px;
@@ -102,6 +119,11 @@ h2{
     margin-bottom: 30px;
     padding: 10px;
 }
+.form-contato p{
+    font-size: 0.8em;
+    text-align: left;
+    margin-bottom: 20px;
+}
 
 .form-contato form{
     display: flex;
@@ -111,28 +133,34 @@ h2{
 }
 
 form label{
-    font-size: 1.3em;
+    font-size: 1em;
     font-weight: bold;
     margin-bottom: 10px;
     margin-top: 10px;
 }
 
 form input{
-    width: 250px;
+    width: 700px;
     height: 30px;
     border: none;
     border-radius: 10px;
 }
 
 #motivo{
-    width: 250px;
+    width: 700px;
     height: 100px;
 }
 
 .botao-enviar{
     width: 150px;
     height: 30px;
-    font-size: 1.3em;
+    font-size: 1.2em;
+}
+
+.foto-endereço{
+    border-radius: 30px;
+    width: auto;
+    height: 300px;
 }
 
 
