DarkMode Footer Update

--- a/index.css
+++ b/index.css
@@ -691,7 +691,7 @@ body{
 }
 
 footer.DarkMode{
-  background-color: #ffffff;
+  background-color: #ebebeb;
 }
 
 /*==================== TV ====================*/
