Revert "DarkMode Footer Update"
This reverts commit fd156831073923ca305e21ee03944ba366c81168.

--- a/index.css
+++ b/index.css
@@ -695,7 +695,7 @@ body{
 }
 
 footer.DarkMode{
-  background-color: #ebebeb;
+  background-color: #ffffff;
 }
 
 /*==================== TV ====================*/
