--- a/index.css
+++ b/index.css
@@ -32,20 +32,6 @@ body.DarkMode{
 footer.DarkMode{
   background-color: rgb(0, 0, 0);
 }
-footer.DarkMode h3{
-  color: black;
-}
-footer.DarkMode .redesocial img{
-  filter: invert(0);
-}
-.info-footer a.corpreta{
-  color: black !important;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.781);
-  transition: 250ms;
-}
-.info-footer a.corpreta:hover{
-  color: #f8670d !important;
-}
 
 /*==================== Start header ====================*/
 .material-symbols-outlined {
@@ -80,6 +66,7 @@ a{
     user-select: none;
     font-size: 1.5rem;
     text-decoration: none;
+    color: antiquewhite;
     font-weight: 800;
 }
 
@@ -97,21 +84,10 @@ a{
 }
 .header > .MudarModo{
     display: none;
-    background: none;
-    color: white;
-    border: none;
     cursor: pointer;
     user-select: none;
     margin-left: auto;
     margin-right: auto;
-}
-.MudarModo >.fa-solid{
-  font-weight: 900;
-  font-size: 25px;
-}
-.MudarModo >.fa-solid:hover{
-  scale: 1.2;
-  transition: 200ms;
 }
 .menu-active .MudarModo{
   display: block;
@@ -413,7 +389,7 @@ h3{
   font-size: 1.3em;
   color: white;
   font-weight: normal;
-  width: 200px;
+  width: 100px;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -430,7 +406,7 @@ h3{
   font-size: 1.3em;
   color: white;
   font-weight: normal;
-  width: 500px;
+  width: 100px;
 }
 
 .redesocial img{
@@ -680,13 +656,14 @@ body{
 
   .info-footer{
     display: flex;
-    flex-direction: column;
-    gap: 30px;
+    flex-direction: row;
+    gap: 80px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.34);
   }
   
   .info-footer a{
-    border-bottom: 1px solid rgb(255, 255, 255);
     transition: 250ms;
+    border-bottom: none;
   }
 
   .info-footer a:hover{
@@ -695,9 +672,8 @@ body{
 }
 
 footer.DarkMode{
-  background-color: #ffffff;
+  background-color: rgba(0, 0, 0, 0);
 }
-
 /*==================== TV ====================*/
 
 @media (min-width: 2814px){
