--- a/index.css
+++ b/index.css
@@ -113,6 +113,10 @@ a{
   scale: 1.2;
   transition: 200ms;
 }
+.menu-toggle.DarkMode{
+  color: white;
+}
+
 .menu-active .MudarModo{
   display: block;
 }
@@ -624,7 +628,6 @@ body{
     .menu-toggle{
       display: none;
     }
-
     .header .MudarModo{
       display: block;
     }
