--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ body {
   width: 100%;
   transition: 250ms;
   background-color: #f7f3e4;
+  overflow-x: hidden;
 }
 /*==================== DarkMode ====================*/
 body.DarkMode{
@@ -65,6 +66,12 @@ footer.DarkMode .redesocial img{
   font-size: 45px !important;
 }
 
+.menu-toggle{
+  margin-left: 80%;
+  font-weight: 900;
+  font-size: 25px;
+}
+
 .background-overlay{
   width: 100%;
   background-color: rgba(0, 0, 0, 0.626);
@@ -84,6 +91,7 @@ a{
 }
 
 .header{
+  height: 70px;
   width: 100%;
   background-image: linear-gradient(to top, rgba(18, 18, 18, 0), rgb(0, 0, 0));
   font-size: 11px;
@@ -91,7 +99,7 @@ a{
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  position:fixed;
+  /* position:fixed; */
   z-index: 1;
   gap: 20px;
 }
@@ -142,11 +150,12 @@ a{
 }
 
 .logo{
+  position: absolute;
   user-select: none;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    width: 50%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
 
 
@@ -160,6 +169,8 @@ a{
   width: 100%;
   text-align: right;
 }
+
+
 
 .menu.active {
   display: flex;
@@ -183,10 +194,10 @@ a{
   font-weight: 400;
 }
 .actions{
+  margin-left: 60%;
     display: none;
     flex-direction: column;
     gap: 25px;
-
 }
 .actions{
   display: none;
@@ -434,7 +445,7 @@ h3{
   font-size: 1.3em;
   color: white;
   font-weight: normal;
-  width: 500px;
+  width: 100%;
 }
 
 .redesocial img{
@@ -588,7 +599,7 @@ main{
   }
 
   .formas-de-pagamento h3{
-    width: 200px;
+    width: 100%;
     text-align: center;
     font-size: 2.3em;
   }
@@ -628,8 +639,16 @@ body{
     .menu-toggle{
       display: none;
     }
+
+
+    
     .header .MudarModo{
       display: block;
+    }
+
+    #img-mecanico{
+      height: 317px;
+      width: 366px;
     }
   
 
@@ -643,11 +662,12 @@ body{
     }
 
     .main-img-text{
-      gap: 20px;
+
       display: flex;
-      flex-direction: row-reverse;
+      flex-direction: column;
       justify-content: space-around;
       align-items: center;
+      margin-bottom: 50px;
     }   
         #img-mecanico{
           margin: 0;
@@ -671,6 +691,7 @@ body{
     .localizacao{
       max-width: 600px ;
       margin: 0;
+      height: 500px;
     }
 
     .form-cadastro{
